Responsive pass for HiDPI; hover state bugfix on mobile.

--- a/client/styles/_common.sass
+++ b/client/styles/_common.sass
@@ -20,6 +20,8 @@
   +respond-to(desktop-width)
     padding-left: 0
     padding-right: 0
+    margin-left: auto
+    margin-right: auto
 
 %image-replacement
   display: inline-block
